--- a/res/layouts/BusView.fxml
+++ b/res/layouts/BusView.fxml
@@ -28,18 +28,19 @@
     <TextArea maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="-1.0" text="TODO: Recieved Signals will probably end up here if this layout is kept." wrapText="true" />
   </bottom>
   <center>
-    <SplitPane dividerPositions="0.7685009487666035" focusTraversable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0">
+    <SplitPane dividerPositions="0.34936479128856623" focusTraversable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0">
       <items>
         <VBox fx:id="mServicesPane" prefHeight="-1.0" prefWidth="-1.0">
           <children>
             <Label fx:id="mTitle" alignment="BOTTOM_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Services" />
             <HBox maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0">
               <children>
-                <Label alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="component" text="Filter:" textAlignment="LEFT" HBox.hgrow="NEVER" />
-                <TextField id="mFilterLabel" fx:id="mFilterInput" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" onAction="#filterServices" prefWidth="121.0" promptText="Name Prefix" HBox.hgrow="ALWAYS" />
+                <Label alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="component" text="Service Filter:" textAlignment="LEFT" HBox.hgrow="NEVER" />
+                <TextField id="mFilterLabel" fx:id="mFilterInput" maxHeight="1.7976931348623157E308" maxWidth="-1.0" minHeight="-1.0" onAction="#filterServices" prefWidth="200.0" promptText="Name Prefix" HBox.hgrow="ALWAYS" />
               </children>
             </HBox>
             <TreeView fx:id="mServiceTree" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" showRoot="false" VBox.vgrow="ALWAYS" />
+            <AnchorPane fx:id="mPaneForTree" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" />
             <Label fx:id="mError" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="error-message" text="" wrapText="true" VBox.vgrow="ALWAYS">
               <graphic>
                 <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="error-label" text="Error:" wrapText="true" />
