--- a/res/layouts/MainView.fxml
+++ b/res/layouts/MainView.fxml
@@ -24,6 +24,18 @@
 <?import javafx.scene.text.*?>
 
 <fx:root type="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml">
+  <bottom>
+    <TabPane maxWidth="1.7976931348623157E308" minHeight="100.0" prefHeight="200.0" prefWidth="-1.0" tabClosingPolicy="UNAVAILABLE">
+      <tabs>
+        <Tab content="$null" text="Log" />
+        <Tab text="Signal received">
+          <content>
+            <ScrollPane fx:id="mSignalReceivedPane" content="$null" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" />
+          </content>
+        </Tab>
+      </tabs>
+    </TabPane>
+  </bottom>
   <center>
     <TabPane id="bustabs" fx:id="mTabPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" rotateGraphic="false" side="TOP" tabClosingPolicy="UNAVAILABLE">
       <tabs>
