--- a/res/layouts/SignalsReceivedView.fxml
+++ b/res/layouts/SignalsReceivedView.fxml
@@ -7,7 +7,7 @@
 
 <fx:root type="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns:fx="http://javafx.com/fxml">
   <center>
-    <ListView fx:id="mSignalListView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" />
+    <ListView fx:id="mSignalListView" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" />
   </center>
   <top>
     <HBox fx:id="mUtilPane" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" />
