Added Filter View
- There is now support for filtering Services
- Also ability to save filters.
- There is also the beginning of transitioning application to showing services as a table.

--- a/res/layouts/MainView.fxml
+++ b/res/layouts/MainView.fxml
@@ -70,7 +70,7 @@
             </Menu>
           </menus>
         </MenuBar>
-        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+        <AnchorPane fx:id="mTopPane" prefHeight="200.0" prefWidth="200.0">
           <children>
             <Label text="Triumph" textFill="BLACK" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
               <font>
