--- a/res/layouts/ServicesView.fxml
+++ b/res/layouts/ServicesView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<fx:root type="HBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" xmlns:fx="http://javafx.com/fxml">
+<fx:root type="HBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
   <children>
     <Pane fx:id="mFilterContainer" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="NEVER" />
     <TabPane fx:id="mTabPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" side="TOP" tabClosingPolicy="UNAVAILABLE" HBox.hgrow="ALWAYS">
