Updates to view
Have main view functioning improperly.

--- a/res/layouts/EndPointView.fxml
+++ b/res/layouts/EndPointView.fxml
@@ -5,14 +5,14 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<fx:root type="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml">
   <left>
     <VBox fx:id="mLeftPane" maxHeight="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0">
       <children>
         <Pane fx:id="mFilterPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="NEVER" />
         <ScrollPane fx:id="mContentPane" fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="SOMETIMES">
           <content>
-            <VBox fx:id="mListContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onScrollFinished="#mListViewContainer" prefHeight="-1.0" prefWidth="-1.0">
+            <VBox fx:id="mListContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0">
               <children>
                 <ListView fx:id="mMethodsListView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="SOMETIMES" />
                 <ListView fx:id="mSignalsListView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="SOMETIMES" />
@@ -24,4 +24,4 @@
       </children>
     </VBox>
   </left>
-</BorderPane>
+</fx:root>
