--- a/res/layouts/MemberView.fxml
+++ b/res/layouts/MemberView.fxml
@@ -24,7 +24,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<fx:root type="VBox" fx:id="mCompletePane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onKeyPressed="#onKeyPressed" onKeyReleased="#onKeyReleased" prefHeight="-1.0" prefWidth="800.0" styleClass="genlabel" xmlns:fx="http://javafx.com/fxml">
+<fx:root type="VBox" fx:id="mCompletePane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onKeyPressed="#onKeyPressed" onKeyReleased="#onKeyReleased" prefHeight="-1.0" prefWidth="-1.0" styleClass="genlabel" xmlns:fx="http://javafx.com/fxml">
   <children>
     <HBox fx:id="mTitlePane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="NEVER" />
     <HBox fx:id="mButtonBar" alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" spacing="5.0" styleClass="genlabel" VBox.vgrow="NEVER">
@@ -37,13 +37,13 @@
     </HBox>
     <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-        <VBox fx:id="mInputArgPane" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" styleClass="argument-pane" HBox.hgrow="ALWAYS">
+        <VBox fx:id="mInputArgPane" alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" styleClass="argument-pane" HBox.hgrow="ALWAYS">
           <children>
             <Label alignment="BOTTOM_CENTER" maxWidth="1.7976931348623157E308" text="Input Arguments" />
             <VBox fx:id="mInputArgBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" />
           </children>
         </VBox>
-        <VBox fx:id="mOutputArgPane" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" styleClass="argument-pane" HBox.hgrow="ALWAYS">
+        <VBox fx:id="mOutputArgPane" alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" styleClass="argument-pane" HBox.hgrow="ALWAYS">
           <children>
             <Label alignment="BOTTOM_CENTER" maxWidth="1.7976931348623157E308" text="Output Arguments" />
             <VBox fx:id="mOutputArgBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" />
