--- a/res/layouts/EndPointFilterView.fxml
+++ b/res/layouts/EndPointFilterView.fxml
@@ -10,7 +10,7 @@
 
 <fx:root type="VBox" minWidth="-1.0" spacing="3.0" xmlns:fx="http://javafx.com/fxml">
   <children>
-    <Label fx:id="mFilterLabel" alignment="BOTTOM_CENTER" maxWidth="1.7976931348623157E308" text="Filter" VBox.vgrow="NEVER" />
+    <Label fx:id="mFilterLabel" alignment="BOTTOM_CENTER" maxWidth="1.7976931348623157E308" styleClass="title" text="EndPoint Filter" VBox.vgrow="NEVER" />
     <HBox maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" spacing="5.0">
       <children>
         <ComboBox fx:id="mFilterComboBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Pre-Defined Filters" HBox.hgrow="SOMETIMES">
