--- a/res/layouts/SaveArgumentDialog.css
+++ b/res/layouts/SaveArgumentDialog.css
@@ -1,6 +1,7 @@
-.button {
-	-fx-background-radius: 12; 
-    -fx-padding: 5;
-    -fx-shadow-highlight-color: f0f0f0;
-    -fx-body-color: linear-gradient(from 0em 0em to 0em 2.083333em, white, #D7D7D7, white);
+#mGridPane {
+	-fx-padding: 10 10 10 10;
+}
+
+.buttonbar {
+	-fx-padding: 5 0 5 0;
 }
