--- a/res/layouts/SaveArgumentDialog.fxml
+++ b/res/layouts/SaveArgumentDialog.fxml
@@ -2,81 +2,69 @@
 
 <?import java.lang.*?>
 <?import java.net.*?>
-<?import java.util.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.*?>
-<?scenebuilder-preview-i18n-resource AlertDialog_en_ER.properties?>
 
-<fx:root type="GridPane" hgap="14.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" vgap="20.0" xmlns:fx="http://javafx.com/fxml">
-  <children>
-    <ImageView fx:id="mImageView" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="TOP" />
-    <VBox maxHeight="+Infinity" maxWidth="+Infinity" minHeight="-Infinity" prefWidth="400.0" spacing="7.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
+<fx:root type="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns:fx="http://javafx.com/fxml">
+  <bottom>
+    <HBox id="HBox" fx:id="mButtonBar" alignment="CENTER" spacing="5.0" styleClass="buttonbar">
       <children>
-        <Label fx:id="messageLabel" text="%label.message" textAlignment="LEFT" wrapText="true">
+        <Pane fx:id="mButtonFillerL1" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="SOMETIMES" />
+        <Pane fx:id="mButtonFillerL2" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="SOMETIMES" />
+        <Pane fx:id="mButtonFillerL3" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="SOMETIMES" />
+        <Button fx:id="mCancelButton" mnemonicParsing="false" onAction="#onCancel" text="Cancel" />
+        <Pane fx:id="mButtonFillerC1" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="SOMETIMES" />
+        <Button fx:id="mSaveButton" mnemonicParsing="false" onAction="#onSave" styleClass="dialog-button" text="Save" />
+        <Pane fx:id="mButtonFillerR1" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="SOMETIMES" />
+      </children>
+    </HBox>
+  </bottom>
+  <center>
+    <ScrollPane fx:id="mArgPane" content="$null" hbarPolicy="NEVER" maxHeight="400.0" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" />
+  </center>
+  <stylesheets>
+    <URL value="@General.css" />
+    <URL value="@SaveArgumentDialog.css" />
+  </stylesheets>
+  <top>
+    <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" spacing="5.0">
+      <children>
+        <Label alignment="BOTTOM_CENTER" maxWidth="1.7976931348623157E308" text="Save this Argument for late use?">
           <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="16.0" />
           </font>
+          <VBox.margin>
+            <Insets fx:id="x1" />
+          </VBox.margin>
         </Label>
-        <TextField fx:id="mInput" maxWidth="1.7976931348623157E308" onAction="#onSetName" prefWidth="-1.0" promptText="%label.inputhint" />
-        <Label id="detailsLabel" fx:id="mError" styleClass="error-message" text="%label.error" textAlignment="LEFT" wrapText="true">
-          <font>
-            <Font size="12.0" />
-          </font>
+        <GridPane id="mErrorRow" fx:id="mGridPane" hgap="10.0" maxWidth="1.7976931348623157E308" padding="$x1" vgap="5.0">
+          <children>
+            <Label fx:id="mNameLabel" alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Name:" GridPane.columnIndex="0" GridPane.hgrow="NEVER" GridPane.rowIndex="0" GridPane.vgrow="NEVER" />
+            <Label fx:id="mSignatureLabel" alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Signature:" GridPane.columnIndex="0" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.vgrow="NEVER" />
+            <TextField fx:id="mNameInput" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="0" />
+            <TextField fx:id="mSignatureInput" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" />
+          </children>
+          <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="-1.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="50.0" prefWidth="150.0" />
+          </columnConstraints>
+          <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          </rowConstraints>
+        </GridPane>
+        <Label fx:id="mError" alignment="CENTER" maxWidth="1.7976931348623157E308" styleClass="error-message" text="Error Message" textAlignment="LEFT" wrapText="true" VBox.vgrow="SOMETIMES">
           <graphic>
-            <Label maxHeight="1.7976931348623157E308" styleClass="error-label" text="Error:" />
+            <Label alignment="CENTER" styleClass="error-label" text="" textAlignment="LEFT" />
           </graphic>
         </Label>
       </children>
+      <padding>
+        <Insets left="10.0" right="10.0" top="10.0" />
+      </padding>
     </VBox>
-    <HBox maxHeight="-Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity" GridPane.columnIndex="1" GridPane.rowIndex="1">
-      <children>
-        <HBox id="HBox" fx:id="actionParent" alignment="CENTER">
-          <children>
-            <Button id="actionButton" fx:id="mOverwriteButton" mnemonicParsing="false" onAction="#onOverwrite" text="%button.action" HBox.hgrow="NEVER">
-              <HBox.margin>
-                <Insets right="14.0" />
-              </HBox.margin>
-            </Button>
-          </children>
-          <HBox.margin>
-            <Insets />
-          </HBox.margin>
-        </HBox>
-        <Pane maxWidth="+Infinity" HBox.hgrow="ALWAYS" />
-        <Button id="cancelButton" fx:id="mCancelButton" cancelButton="true" minWidth="80.0" mnemonicParsing="false" onAction="#onCancel" text="%button.cancel" HBox.hgrow="NEVER">
-          <HBox.margin>
-            <Insets />
-          </HBox.margin>
-        </Button>
-        <HBox id="HBox" fx:id="okParent" alignment="CENTER">
-          <children>
-            <Button id="okButton" fx:id="mOkButton" minWidth="80.0" mnemonicParsing="false" onAction="#onOk" text="%button.ok" HBox.hgrow="NEVER">
-              <HBox.margin>
-                <Insets left="14.0" />
-              </HBox.margin>
-            </Button>
-          </children>
-        </HBox>
-      </children>
-    </HBox>
-  </children>
-  <columnConstraints>
-    <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" />
-    <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="+Infinity" minWidth="-Infinity" />
-  </columnConstraints>
-  <padding>
-    <Insets bottom="14.0" left="14.0" right="14.0" top="14.0" />
-  </padding>
-  <rowConstraints>
-    <RowConstraints maxHeight="+Infinity" minHeight="-Infinity" prefHeight="66.0" valignment="CENTER" vgrow="ALWAYS" />
-    <RowConstraints maxHeight="26.0" minHeight="-Infinity" prefHeight="26.0" vgrow="NEVER" />
-  </rowConstraints>
-  <stylesheets>
-    <URL value="@SaveArgumentDialog.css" />
-    <URL value="@General.css" />
-  </stylesheets>
+  </top>
 </fx:root>
